<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VTU Fest</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_view">Register Here</string>
    <string name="action_about">About</string>
    <string name="hello_world">Welcome to Davana </string>
    <string name="title_activity_view_class">Register</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome_screen">VTU fest</string>
    <string name="title_activity_additional_copyrights">AdditionalCopyrights</string>
    <string name="title_activity_slider">Slider</string>
    <string name="imgview_des">ImageView</string>
    <string name="alert_box_no_internet_title">No Internet Connection</string>
    <string name="contact">        Sri M C Patel (Programme)-<a href="tel:9916188768">9916188768</a>\n\n
        Dr.G P Desai (Programme)-<a href="tel:9845388943">9845388943</a>\n\n
        Dr.G.Manavendra(Programme)-<a href="tel:9964030806">9964030806</a>\n\n
        Prof.K S S Wadeyar(Transportation)-<a href="tel:9945013595">9945013595</a>\n\n
        Dr.S.Suresh(Catering)-<a href="tel:9448233199">9448233199</a>\n\n
        Dr.C.R.Nirmala(Registration)-<a href="tel:9740770377">9740770377</a>\n\n
        Dr.K.C.Devendrappa(Accommodation)-<a href="tel:9844616304">9844616304</a>\n\n
        Smt.Roopa G M (Programme)-<a href="tel:8123888668">8123888668</a>\n\n
        Sri M G Shekharappa(Eligibility)-<a href="tel:9743020890">9743020890</a>\n\n
        Abhilash H.C(Student Coordinator - Registration)-<a href="tel:9686602578">9686602578</a>\n\n
        Vinay M.T(Student Coordinator - Registration)-<a href="tel:9620690532">9620690532</a>\n\n
        Kishan R(Technical Support - Registration)-<a href="tel:9686602578">9036490374</a>\n\n</string>

    <string-array name="sliderlist">
        <item>Home</item>
        <item>Events</item>
        <item>Register</item>
        <item>Rules</item>
        <item>Downloads</item>
        <item>Contact</item>
        <item>About</item>
        <item>Share</item>
        <item>FeedBack</item>
    </string-array>
    <string-array name="icons">
        <item>@drawable/nav_home</item>
        <item>@drawable/nav_events</item>
        <item>@drawable/nav_register</item>
        <item>@drawable/nav_rules</item>
        <item>@drawable/nav_download</item>
        <item>@drawable/nav_contact</item>
        <item>@drawable/nav_about</item>
        <item>@drawable/nav_share</item>
        <item>@drawable/nav_feedback</item>
    </string-array>

    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_event_rules">EventRules</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_slider_right">SliderRight</string>
    <string name="slider_right_event_title">Live Events</string>
    <string name="slider_right_no_events">No OnGoing Events</string>
    <string name="slider_right_music">Music</string>
    <string name="slider_right_dance">Dance</string>
    <string name="slider_right_literary">Literary Events</string>
    <string name="slider_right_theater">Theater</string>
    <string name="slider_right_fine">Fine Arts</string>
    <string name="logo">logo_description</string>
    <string name="register_help">Step-1	For Team Registration, Team Manager (Team Manager) need to be registered first. Click on the link provided below for the same.Step 2	Provide the details of Team Manager and click Register.Step 3	A Verification Code (VID) will be sent to Team Manager’s email id provided in the details section.Step 4	Login to your email account for VID then complete the Team Manager Registration Process by Entering it on to Verification Window.Step 5	Once you click the Verify option, you will receive a Confirmation mail With the Further Steps to register your team.Step 6	You can continue the Team Registration Process immediately or you can do it later by selecting Team Manager Login from Registraion Tab.NOTE 1	Provide the proper Email ID, so that we can further Communicate with you.NOTE 2	Only Team Manager can Register their team members and details need to be verified before submission.SUPPORT	For any Queries and Clarifications contact Registration Team under Registration Tab.</string>
    <string name="team_manager_login">Team Manager Login</string>
    <string name="title_activity_team_manager_login">TeamManagerLogin</string>
    <string name="about_text">\n App Developer\n<a href="https://www.facebook.com/ladwa.aditya">\n Aditya Ladwa</a>\n(2nd Year CSE-BIET)\n\n Logo Designer\n<a href="https://www.facebook.com/veeresh.vik">\n Veeresh Thotigar</a>\n(3rd Year CSE-BIET)\n\n WebSite Designer\n<a href="https://www.facebook.com/Kishan19feb">\n Kishan Ravindra</a>\n(3rd Year CSE-BIET)\n\n App Testers:\n\n<a href="https://www.facebook.com/vinay.mt"> Vinay MT</a>\n(3nd Year CSE-BIET)\n<a href="https://www.facebook.com/amksharath.k.s"> Sharath K S</a>\n(2nd Year CSE-BIET)\n<a href="https://www.facebook.com/tarun.mallikarjun"> Tarun Mallikarjun</a>\n(2nd Year CSE-BIET)\n<a href="https://www.facebook.com/naresh.ram.7146"> Naresh N</a>\n(2nd Year CSE-BIET)\n<a href="https://www.facebook.com/gsk00007"> Ganesh S</a>\n(2nd Year CSE-BIET)</string>
    <string name="sliding_message">Welcome To Davana VTU-Youth Fest 2014</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="notifications">Info</string>
    <string name="no_notifications">No Notifications</string>
    <string name="imageview">ImageView</string>
    <string name="no_announcements_yet">No Announcements</string>
    <string name="announcements">Announcements</string>
    <string name="logo_string">Logo</string>
    <string name="refresh_events">Refresh Events</string>

</resources>