<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/slider_bg_2" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="438dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SliderRight" >

        <TextView
            android:id="@+id/header_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/heading"
            android:layout_alignRight="@+id/heading"
            android:layout_below="@+id/heading"
            android:layout_marginTop="@dimen/margin_slider_right"
            android:text="@string/slider_right_music"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/slider_header_colour"
            android:textSize="@dimen/slider_event_header_text_size" />

        <TextView
            android:id="@+id/tv_dance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/tv_music"
            android:layout_below="@+id/header_dance"
            android:layout_marginTop="@dimen/margin_slider_on_events"
            android:text="@string/slider_right_no_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/slider_event_colour"
            android:textSize="@dimen/slider_event_text_size" />

        <TextView
            android:id="@+id/tv_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/header_music"
            android:layout_alignRight="@+id/header_music"
            android:layout_below="@+id/header_music"
            android:layout_marginTop="@dimen/margin_slider_on_events"
            android:text="@string/slider_right_no_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/slider_event_colour"
            android:textSize="@dimen/slider_event_text_size" />

        <TextView
            android:id="@+id/tv_theater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/tv_dance"
            android:layout_below="@+id/header_theater"
            android:layout_marginTop="@dimen/margin_slider_on_events"
            android:text="@string/slider_right_no_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/slider_event_colour"
            android:textSize="@dimen/slider_event_text_size" />

        <TextView
            android:id="@+id/header_theater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_theater"
            android:layout_alignRight="@+id/tv_dance"
            android:layout_below="@+id/tv_literary"
            android:layout_marginTop="@dimen/margin_slider_right"
            android:text="@string/slider_right_theater"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/slider_header_colour"
            android:textSize="@dimen/slider_event_header_text_size" />

        <TextView
            android:id="@+id/header_literary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_literary"
            android:layout_alignRight="@+id/tv_dance"
            android:layout_below="@+id/tv_dance"
            android:layout_marginTop="@dimen/margin_slider_right"
            android:text="@string/slider_right_literary"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/slider_header_colour"
            android:textSize="@dimen/slider_event_header_text_size" />

        <TextView
            android:id="@+id/header_dance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_dance"
            android:layout_below="@+id/tv_music"
            android:layout_marginTop="@dimen/margin_slider_right"
            android:text="@string/slider_right_dance"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/slider_header_colour"
            android:textSize="@dimen/slider_event_header_text_size" />

        <TextView
            android:id="@+id/tv_literary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/header_theater"
            android:layout_alignRight="@+id/tv_dance"
            android:layout_below="@+id/header_literary"
            android:layout_marginTop="@dimen/margin_slider_on_events"
            android:text="@string/slider_right_no_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/slider_event_colour"
            android:textSize="@dimen/slider_event_text_size" />

        <TextView
            android:id="@+id/header_fineArts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_theater"
            android:layout_alignRight="@+id/tv_theater"
            android:layout_below="@+id/tv_theater"
            android:layout_marginTop="@dimen/margin_slider_right"
            android:text="@string/slider_right_fine"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/slider_header_colour"
            android:textSize="@dimen/slider_event_header_text_size" />

        <TextView
            android:id="@+id/tv_fineArts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/header_fineArts"
            android:layout_alignRight="@+id/tv_theater"
            android:layout_below="@+id/header_fineArts"
            android:layout_marginTop="@dimen/margin_slider_on_events"
            android:text="@string/slider_right_no_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/slider_event_colour"
            android:textSize="@dimen/slider_event_text_size" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/notifications"
            android:layout_below="@+id/notifications"
            android:layout_marginTop="16dp"
            android:text="@string/slider_right_event_title"
            android:textColor="#80A1F5"
            android:textSize="@dimen/slider_title_size" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/no_announcements_yet"
            android:textColor="#ffcd12"
            android:textSize="@dimen/slider_event_text_size" />

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/notifications"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/notifications"
            android:layout_marginTop="58dp"
            android:text="@string/announcements"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#80A1F5"
            android:textSize="25sp" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/refresh_events"
            android:textColor="@color/slider_header_colour" />
    </RelativeLayout>

</ScrollView>